--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-target/
+target/classes
+target/crud-pessoa-1.0-SNAPSHOT
+target/generated-sources
+target/generated-test-sources
+target/maven-archiver
+target/maven-status
+target/surefire-reports
+target/test-classes
+
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -61,3 +69,6 @@ build/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+!/target/crud-pessoa-1.0-SNAPSHOT.war
+!/docker/custom-modules/postgresql-42.7.3.jar
