--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ target/test-classes
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
